--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-toastify": "^8.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
